fix: remove unnecessary overflow properties in guest-mode navigation and heading styles

--- a/style/standard.css
+++ b/style/standard.css
@@ -44,7 +44,6 @@ body.guest-mode .nav {
   position: relative;
   width: 100%;
   height: 100vh;
-  /* overflow: hidden; */
 }
 
 /* DIESE FLÄCHE ist ab jetzt auf jeder Seite der "Canvas" */
@@ -55,7 +54,6 @@ body.guest-mode .nav {
     width: calc(100vw - var(--sidebar-w));
     height: calc(100vh - var(--header-h));
     overflow-y: auto;
-    overflow-x: hidden;
     box-sizing: border-box;
     background: var(--GlobalBackgroundWhite);
 }
@@ -336,7 +334,6 @@ h3 {
   clip: rect(0 0 0 0);
   height: 1px;
   margin: -1px;
-  overflow: hidden;
   padding: 0;
   position: absolute;
   width: 1px;
